[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loreweave_llm"
version = "0.1.0"
description = "Python SDKs for the LoreWeave platform: loreweave_llm (gateway client) + loreweave_extraction (Pass 2 extraction library)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  # P1 (hierarchical extraction T1) — loreweave_parse structural decomposer.
  # html.parser backend is stdlib; we use bs4 for navigation + decompose.
  "beautifulsoup4>=4.12,<5",
  # Q0 (eval lift) — loreweave_eval.eval_harness loads golden-fixture YAML.
  # Pure-python, tiny; rides in with the distribution so the online-eval
  # consumer (learning-service) gets it without a separate pin.
  "PyYAML>=6.0",
  # Phase 6c-γ — loreweave_obs tracing helper. These ride in with the
  # distribution, so every service that `pip install /sdk`s gets tracing.
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  # Unified Job Control Plane P1 — loreweave_jobs.BaseTerminalConsumer is a Redis-Streams
  # consumer-group transport scaffold. Every consuming Python service already runs redis;
  # the SDK declares it so its own unit tests + the import resolve. (emit.py is duck-typed
  # — no asyncpg dep.)
  "redis>=5",
  # MCP fan-out S-KIT-PY (2026-06-20) — loreweave_mcp is the shared Python MCP kit
  # (stateless FastMCP wiring, identity envelope, scope guards, confirm-token spine,
  # _meta validator). It needs the MCP SDK; every Python MCP provider service that
  # `pip install /sdk`s gets the kit + its transport.
  "mcp>=1.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "fastapi>=0.110",
]

# Phase 4b-α — top-level packages shipped under this distribution.
# `loreweave_extraction` depends on `loreweave_llm` (LLM SDK); they're
# tightly coupled by design (extraction always uses the LLM gateway),
# so a single `pip install /sdk` brings both.
# P1 (2026-05-23) — `loreweave_parse` added (structural decomposer T1);
# pure-Python, no LLM/HTTP deps, consumed by knowledge-service router
# + via /internal/parse by worker-infra + book-service .txt sync path.
[tool.setuptools.packages.find]
include = [
  "loreweave_llm*",
  "loreweave_extraction*",
  "loreweave_obs*",
  "loreweave_parse*",
  # Q0 (2026-06-01) — `loreweave_eval` added (extraction-quality scorer lifted
  # from knowledge-service/tests/quality). Depends on loreweave_extraction
  # (canonical + prompts) + loreweave_llm (errors) + PyYAML; the LLM client is
  # injected as a Protocol so the package stays transport-agnostic.
  "loreweave_eval*",
  # mui #3 (2026-06-07) — `loreweave_grounding` added (shared grounding port:
  # GroundingCite + compose_cites + CanonVerifier, lifted from lore-enrichment).
  # Pure-Python (pydantic + stdlib); any LLM call is injected by the caller, so
  # no HTTP/LLM hard dep. Consumed by lore-enrichment (migrate), knowledge, and
  # composition in later adoption phases.
  "loreweave_grounding*",
  # Unified Job Control Plane P1 (2026-06-15) — `loreweave_jobs` added (canonical job
  # contract + BaseTerminalConsumer transport scaffold + emit_job_event outbox writer).
  # Depends on redis (consumer); contract/emit are pure-Python (emit is duck-typed, no
  # asyncpg). Consumed by every Python worker service migrating off its hand-rolled consumer.
  "loreweave_jobs*",
  # D-E0-4 (2026-06-18) — `loreweave_grants` added (the shared E0 grant client,
  # extracted from 3 byte-identical service copies: composition/knowledge/
  # translation). Pure httpx + stdlib; per-service knobs passed at construction.
  "loreweave_grants*",
  # MCP fan-out S-KIT-PY (2026-06-20) — `loreweave_mcp` added (the shared Python
  # MCP kit: make_stateless_fastmcp + build_tool_context + ForbidExtra extracted
  # from knowledge-service; the 3 scope guards, confirm-token spine, and _meta
  # validator built fresh). Depends on the `mcp` SDK + pydantic. Consumed by every
  # Python MCP provider service (jobs, composition, translation).
  "loreweave_mcp*",
]
exclude = ["tests*"]

# D-EMB-MODEL-REF-01 — loreweave_extraction loads its Pass-2 prompts from
# prompts/*.md at runtime (loreweave_extraction/prompts/__init__.py).
# setuptools drops non-.py files by default, so without this the
# installed package has no prompts and every extraction job fails with
# FileNotFoundError. Ship the .md prompt templates as package data.
[tool.setuptools.package-data]
loreweave_extraction = ["prompts/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
