[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loreweave_llm"
version = "0.1.0"
description = "Python SDKs for the LoreWeave platform: loreweave_llm (gateway client) + loreweave_extraction (Pass 2 extraction library)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  # P1 (hierarchical extraction T1) — loreweave_parse structural decomposer.
  # html.parser backend is stdlib; we use bs4 for navigation + decompose.
  "beautifulsoup4>=4.12,<5",
  # Q0 (eval lift) — loreweave_eval.eval_harness loads golden-fixture YAML.
  # Pure-python, tiny; rides in with the distribution so the online-eval
  # consumer (learning-service) gets it without a separate pin.
  "PyYAML>=6.0",
  # Phase 6c-γ — loreweave_obs tracing helper. These ride in with the
  # distribution, so every service that `pip install /sdk`s gets tracing.
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  # P2·A2a (687fd4949) — loreweave_obs.logging_setup imports pythonjsonlogger for structured
  # JSON logs but the dep was never declared → every service rebuild crashed on startup
  # (ModuleNotFoundError). Declared here so `pip install /sdk` resolves it fleet-wide.
  "python-json-logger>=2.0",
  # Unified Job Control Plane P1 — loreweave_jobs.BaseTerminalConsumer is a Redis-Streams
  # consumer-group transport scaffold. Every consuming Python service already runs redis;
  # the SDK declares it so its own unit tests + the import resolve. (emit.py is duck-typed
  # — no asyncpg dep.)
  "redis>=5",
  # MCP fan-out S-KIT-PY (2026-06-20) — loreweave_mcp is the shared Python MCP kit
  # (stateless FastMCP wiring, identity envelope, scope guards, confirm-token spine,
  # _meta validator). It needs the MCP SDK; every Python MCP provider service that
  # `pip install /sdk`s gets the kit + its transport.
  "mcp>=1.27",
  # SDK-2 / SEC-2 (2026-07-04) — loreweave_authn is the shared platform-user JWT
  # verifier (replaces the ~6 copy-pasted jwt.decode blocks). It needs PyJWT; every
  # service that `pip install /sdk`s + imports the verifier gets it (a migrated
  # service drops its own PyJWT pin). fastapi is already a core dep of every
  # consuming FastAPI service, so it stays in the test extras here.
  "PyJWT>=2.8",
  # WS-1.0 (review-impl) — loreweave_crypto is the envelope-encryption module (per-user
  # DEK wrap/unwrap, blind index, encrypted embeddings). Every service that stores or reads
  # private user content pip-installs the SDK and imports it, so `cryptography` MUST be a
  # declared dependency — without it the import fails at runtime on a fresh install.
  "cryptography>=42",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "fastapi>=0.110",
]

# Phase 4b-α — top-level packages shipped under this distribution.
# `loreweave_extraction` depends on `loreweave_llm` (LLM SDK); they're
# tightly coupled by design (extraction always uses the LLM gateway),
# so a single `pip install /sdk` brings both.
# P1 (2026-05-23) — `loreweave_parse` added (structural decomposer T1);
# pure-Python, no LLM/HTTP deps, consumed by knowledge-service router
# + via /internal/parse by worker-infra + book-service .txt sync path.
[tool.setuptools.packages.find]
include = [
  "loreweave_llm*",
  "loreweave_extraction*",
  "loreweave_obs*",
  "loreweave_parse*",
  # WS-5.11/5.13 (2026-07-15) — `loreweave_safety` (the deterministic distress/harassment/
  # self-harm FLOOR + clinical deny-list). Pure-stdlib; ONE home so worker-ai (weekly
  # reflection) + chat-service (practice gate) screen identically — a second copy of a
  # safety lexicon is a drift.
  "loreweave_safety*",
  # Q0 (2026-06-01) — `loreweave_eval` added (extraction-quality scorer lifted
  # from knowledge-service/tests/quality). Depends on loreweave_extraction
  # (canonical + prompts) + loreweave_llm (errors) + PyYAML; the LLM client is
  # injected as a Protocol so the package stays transport-agnostic.
  "loreweave_eval*",
  # mui #3 (2026-06-07) — `loreweave_grounding` added (shared grounding port:
  # GroundingCite + compose_cites + CanonVerifier, lifted from lore-enrichment).
  # Pure-Python (pydantic + stdlib); any LLM call is injected by the caller, so
  # no HTTP/LLM hard dep. Consumed by lore-enrichment (migrate), knowledge, and
  # composition in later adoption phases.
  "loreweave_grounding*",
  # Unified Job Control Plane P1 (2026-06-15) — `loreweave_jobs` added (canonical job
  # contract + BaseTerminalConsumer transport scaffold + emit_job_event outbox writer).
  # Depends on redis (consumer); contract/emit are pure-Python (emit is duck-typed, no
  # asyncpg). Consumed by every Python worker service migrating off its hand-rolled consumer.
  "loreweave_jobs*",
  # D-E0-4 (2026-06-18) — `loreweave_grants` added (the shared E0 grant client,
  # extracted from 3 byte-identical service copies: composition/knowledge/
  # translation). Pure httpx + stdlib; per-service knobs passed at construction.
  "loreweave_grants*",
  # MCP fan-out S-KIT-PY (2026-06-20) — `loreweave_mcp` added (the shared Python
  # MCP kit: make_stateless_fastmcp + build_tool_context + ForbidExtra extracted
  # from knowledge-service; the 3 scope guards, confirm-token spine, and _meta
  # validator built fresh). Depends on the `mcp` SDK + pydantic. Consumed by every
  # Python MCP provider service (jobs, composition, translation).
  "loreweave_mcp*",
  # SDK-2 / SEC-2 (2026-07-04) — `loreweave_authn` added (the shared platform-user
  # JWT verifier, HS256/alg-pinned/exp-required/sub→UUID; mirrors Go
  # contracts/platformjwt). Replaces the ~6 copy-pasted jwt.decode middleware blocks
  # in composition/knowledge/chat/learning/campaign/jobs. Depends on PyJWT + fastapi.
  "loreweave_authn*",
  # T3.1 (2026-07-04) — `loreweave_context` added (the Context Budget Law Planner/Compiler
  # kernel; T3.1 ships the system-message assembly renderer unifying chat's two lockstep
  # prompt ladders — A1). Pure-Python string logic, no provider SDK (provider-gate clean).
  # First consumer: chat-service/stream_service; roleplay/composition to follow.
  "loreweave_context*",
  # P3 SDK-first (2026-07-05) — `loreweave_internal_client` added (shared mechanics for
  # internal S2S HTTP clients: token/JSON headers, uniform X-Trace-Id propagation, the
  # 502/503/429-retryable predicate + error base, and the model-name resolver collapsed
  # from 5 byte-identical copies). Pure httpx. Wave 1 consumers: translation/knowledge/
  # composition/campaign/video model_name shims; more client migrations to follow.
  "loreweave_internal_client*",
  # D-CANON-CHECK-SDK-UNIFY (2026-07-06) — `loreweave_canon_check` added (shared
  # symbolic-prefilter + LLM-judge plumbing, hoisted from composition-service's
  # canon_check.py + knowledge-service's near-duplicate mirror). Pure pydantic +
  # stdlib, no LLM/HTTP hard dep (the caller injects its own submit_and_wait).
  "loreweave_canon_check*",
  # D-COSINE-SDK-PROMOTE (2026-07-08) — `loreweave_vecmath` added (shared cosine-
  # similarity math, promoted from near-duplicate copies in lore-enrichment/
  # composition/knowledge-service). Pure stdlib (math + typing only), no deps.
  "loreweave_vecmath*",
  # WS-1.0 (2026-07-12, review-impl) — `loreweave_crypto` added (envelope encryption for
  # private user content: per-user DEK wrap/unwrap under a deployment KEK, HMAC blind
  # index, encrypted embeddings + cosine, and the DEKClient). WITHOUT THIS LINE the module
  # is silently absent from `pip install /sdk`, so every consumer's `import loreweave_crypto`
  # fails at runtime and the whole encryption slice is unreachable — a shipped-but-unusable
  # feature. Depends on `cryptography` (declared in [project.dependencies] above).
  "loreweave_crypto*",
  # ACP A1 (2026-07-16) — `loreweave_agent_control` added (the Agent Control Plane SDK:
  # the rail verdict-machine + the executive state-merge, extracted from chat-service +
  # knowledge-service so any agent-runtime consumes ONE surface). WITHOUT THIS LINE the
  # module is silently absent from `pip install /sdk`, so chat's `rail_progress` shim and
  # knowledge's `executive` import fail at RUNTIME and BOTH services fail to start — the
  # A1 /review-impl caught exactly this (tests use PYTHONPATH=sdks/python, which hides it).
  # Pure-stdlib (no deps); consumers: chat-service, knowledge-service (roleplay/game later).
  "loreweave_agent_control*",
]
exclude = ["tests*"]

# D-EMB-MODEL-REF-01 — loreweave_extraction loads its Pass-2 prompts from
# prompts/*.md at runtime (loreweave_extraction/prompts/__init__.py).
# setuptools drops non-.py files by default, so without this the
# installed package has no prompts and every extraction job fails with
# FileNotFoundError. Ship the .md prompt templates as package data.
[tool.setuptools.package-data]
loreweave_extraction = ["prompts/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
