[package]
name = "world-service"
version = "0.1.0-cycle26"
description = "Geography substrate service for the LLM MMO RPG. Cycle 5 (L1.C) added the per-reality DB provisioner / deprovisioner / capacity_planner / orphan_scanner modules + db_pool (L1.G.3). Cycle 16 (L3.I) added the embedding queue. Cycle 26 (L5.G) adds the reality_seeder module: orchestrator + canon/book/knowledge RPC traits + Q-L5-2 translation gate + Q-L1A-3 audit sink + per-100-entry checkpointing + lifecycle transitioner for seeding→active/failed_seeding. The GEO_001 aggregate behavior still awaits the DP-kernel (cycle 17)."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "world_service"
path = "src/lib.rs"

[[bin]]
name = "world-service"
path = "src/main.rs"

# L1.C.4 — orphan_scanner binary. Nightly cron entry-point per R04 §12D.7.
# Reads reality_registry; marks partial-state realities and drops after a
# 7-day grace period.
[[bin]]
name = "orphan_scanner"
path = "src/bin/orphan_scanner.rs"

# L1.C provisioner core + L1.G.3 db_pool share these. All workspace-pinned.
[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
meta-rs = { path = "../../crates/meta-rs" }

[dev-dependencies]
# Async testing not needed yet — provisioner core is sync over a Connection
# trait, mirroring meta-rs::Connection. Real async impls land with sqlx later.
