# tests/sim — S10 kernel simulation DST (H1 / VOPR-lite).
#
# ISOLATED workspace (own `[workspace]` table) so it is excluded from the root
# workspace and any future madsim `[patch]` stays local to this crate (review:
# plan Inc-1 isolation note). Mirrors the standalone-module pattern used by
# `tests/perf/` (Go) and `tests/conformance/` (Go).
[package]
name = "loreweave-sim"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Deterministic simulation DST for the dp-kernel event-sourcing spine (S10). Seeded scheduler + SimEventStore, asserting projection-convergence / append-atomicity / version-CAS over the real kernel + projection crates."

# Own workspace root → excluded from the repo root workspace; keeps the build
# (and any Path-A madsim patch) self-contained.
[workspace]

[lib]
name = "loreweave_sim"
path = "src/lib.rs"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[dependencies]
# The real kernel under test — the EventStore trait + envelope + projection
# contracts the sim drives. Path dep; built normally (Path B uses no tokio
# patch, so sqlx compiles fine).
dp-kernel = { path = "../../crates/dp-kernel" }
# The REAL projection code the convergence oracle drives (review HIGH-2: no
# hand-rolled re-impl → no common-mode vacuity).
projections-pc = { path = "../../crates/projections/pc" }
# The REAL tilemap engine (Inc-5 determinism-DST drives `place_tilemap`).
tilemap-service = { path = "../../services/tilemap-service" }

async-trait = "0.1"
uuid = { version = "1.10", features = ["serde", "v4", "v5"] }
serde_json = "1.0"
# Deterministic PRNG — ChaCha8 seeded per run fixes the entire interleaving.
rand = "0.9"
rand_chacha = "0.9"
