[package]
name = "projections-canon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "L5.D.3 — canon_projection writer (RAID cycle 23 L5 inbound canon)."

[lib]
path = "src/lib.rs"

[dependencies]
dp-kernel = { path = "../../dp-kernel" }
serde_json = { workspace = true }
uuid = { workspace = true }
