[package]
name = "projections-pc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "L3.B.3 — PC + pc_inventory + pc_relationship projection skeletons (RAID cycle 13)."

[lib]
path = "src/lib.rs"

[dependencies]
dp-kernel = { path = "../../dp-kernel" }
serde_json = { workspace = true }
uuid = { workspace = true }
