[package]
name = "projections-session"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "L3.B.7 — session_participants projection skeleton (S2 capability binding) — RAID cycle 13."

[lib]
path = "src/lib.rs"

[dependencies]
dp-kernel = { path = "../../dp-kernel" }
serde_json = { workspace = true }
uuid = { workspace = true }
